using UnityEngine;
using System.Collections.Generic;
using System.IO;

public class ArmsManager : MonoBehaviour
{
    [System.Serializable]
    public class HandsPreset
    {
        public string presetName;
        public GameObject handsPrefab;
        public Vector3 positionOffset = new Vector3(0.1f, -0.2f, 0.3f);
        public float scale = 1.0f;
    }

    [Header("Hands Presets Configuration")]
    [SerializeField] private int presetsCount = 5;
    [SerializeField] private List<HandsPreset> handsPresets = new List<HandsPreset>();

    [Header("CSV Configuration")]
    [SerializeField] private string csvFileName = "hands_config.csv";
    [SerializeField] private bool autoLoadFromCSV = true;

    [Header("Current Hands")]
    [SerializeField] private GameObject currentHandsInstance;

    [Header("Systems Integration")]
    [SerializeField] private string playerArmsTag = "PlayerArms";
    private PlayerHealth playerHealth;
    private StalkerAimSystem aimSystem;

    // –≠—Ñ—Ñ–µ–∫—Ç—ã —Å–∏—Å—Ç–µ–º—ã
    private float healthShakeIntensity = 0f;
    private float radiationTremorIntensity = 0f;
    private float aimStability = 1f;

    private Animator currentAnimator;
    private bool isInitialized = false;

    void Start()
    {
        // –ù–∞—Ö–æ–¥–∏–º —Å–∏—Å—Ç–µ–º—ã –∑–¥–æ—Ä–æ–≤—å—è –∏ –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è
        FindAndConnectSystems();

        if (autoLoadFromCSV)
        {
            LoadHandsConfigFromCSV();
        }
        InitializeHands();
    }

    // üîÑ –ò–ù–¢–ï–ì–†–ê–¶–ò–Ø –° –°–ò–°–¢–ï–ú–ê–ú–ò
    void FindAndConnectSystems()
    {
        // –ò—â–µ–º —Å–∏—Å—Ç–µ–º—ã –≤ —Ä–æ–¥–∏—Ç–µ–ª—å—Å–∫–∏—Ö –æ–±—ä–µ–∫—Ç–∞—Ö –∏–ª–∏ –≤ —Å—Ü–µ–Ω–µ
        playerHealth = GetComponentInParent<PlayerHealth>();
        if (playerHealth == null)
        {
            playerHealth = FindObjectOfType<PlayerHealth>();
            Debug.Log(playerHealth != null ?
                "‚úÖ PlayerHealth found in scene" :
                "‚ö†Ô∏è PlayerHealth not found in scene");
        }

        aimSystem = GetComponentInParent<StalkerAimSystem>();
        if (aimSystem == null)
        {
            aimSystem = FindObjectOfType<StalkerAimSystem>();
            Debug.Log(aimSystem != null ?
                "‚úÖ StalkerAimSystem found in scene" :
                "‚ö†Ô∏è StalkerAimSystem not found in scene");
        }

        // –ü–æ–¥–ø–∏—Å—ã–≤–∞–µ–º—Å—è –Ω–∞ —Å–æ–±—ã—Ç–∏—è –∑–¥–æ—Ä–æ–≤—å—è
        if (playerHealth != null)
        {
            playerHealth.OnHealthChanged += OnHealthChanged;
            playerHealth.OnRadiationChanged += OnRadiationChanged;
            Debug.Log("‚úÖ Connected to PlayerHealth system events");
        }
    }

    // –°–æ–±—ã—Ç–∏—è –∑–¥–æ—Ä–æ–≤—å—è
    private void OnHealthChanged(float health)
    {
        // –û–±–Ω–æ–≤–ª—è–µ–º —ç—Ñ—Ñ–µ–∫—Ç—ã –ø—Ä–∏ –∏–∑–º–µ–Ω–µ–Ω–∏–∏ –∑–¥–æ—Ä–æ–≤—å—è
        UpdateHealthEffects();
    }

    private void OnRadiationChanged(float radiation)
    {
        // –û–±–Ω–æ–≤–ª—è–µ–º —ç—Ñ—Ñ–µ–∫—Ç—ã –ø—Ä–∏ –∏–∑–º–µ–Ω–µ–Ω–∏–∏ —Ä–∞–¥–∏–∞—Ü–∏–∏
        UpdateHealthEffects();
    }

    // –î–∏–Ω–∞–º–∏—á–µ—Å–∫–æ–µ –∏–∑–º–µ–Ω–µ–Ω–∏–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–∞ –ø—Ä–µ—Å–µ—Ç–æ–≤ –≤ –∏–Ω—Å–ø–µ–∫—Ç–æ—Ä–µ
    void OnValidate()
    {
        // –ê–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ —Ä–µ–≥—É–ª–∏—Ä—É–µ–º —Ä–∞–∑–º–µ—Ä —Å–ø–∏—Å–∫–∞ –ø—Ä–∏ –∏–∑–º–µ–Ω–µ–Ω–∏–∏ presetsCount
        while (handsPresets.Count < presetsCount)
        {
            handsPresets.Add(new HandsPreset());
        }
        while (handsPresets.Count > presetsCount)
        {
            handsPresets.RemoveAt(handsPresets.Count - 1);
        }
    }

    // –≠–ö–°–ü–û–†–¢ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ –≤ CSV
    [ContextMenu("Export Hands Config to CSV")]
    public void ExportHandsConfigToCSV()
    {
        string filePath = Path.Combine(Application.dataPath, "_Project/Configs", csvFileName);
        string directory = Path.GetDirectoryName(filePath);

        if (!Directory.Exists(directory))
            Directory.CreateDirectory(directory);

        using (StreamWriter writer = new StreamWriter(filePath))
        {
            // –ó–∞–≥–æ–ª–æ–≤–æ–∫ CSV
            writer.WriteLine("PresetName,PrefabPath,PositionX,PositionY,PositionZ,Scale");

            // –î–∞–Ω–Ω—ã–µ –ø—Ä–µ—Å–µ—Ç–æ–≤
            foreach (var preset in handsPresets)
            {
                string prefabPath = preset.handsPrefab != null ?
                    GetPrefabPath(preset.handsPrefab) : "None";

                writer.WriteLine($"{preset.presetName}," +
                               $"{prefabPath}," +
                               $"{preset.positionOffset.x}," +
                               $"{preset.positionOffset.y}," +
                               $"{preset.positionOffset.z}," +
                               $"{preset.scale}");
            }
        }

        Debug.Log($"‚úÖ Hands config exported to: {filePath}");
#if UNITY_EDITOR
        UnityEditor.AssetDatabase.Refresh();
#endif
    }

    // –ò–ú–ü–û–†–¢ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ –∏–∑ CSV
    [ContextMenu("Load Hands Config from CSV")]
    public void LoadHandsConfigFromCSV()
    {
        string filePath = Path.Combine(Application.dataPath, "_Project/Configs", csvFileName);

        if (!File.Exists(filePath))
        {
            Debug.LogWarning($"‚ö†Ô∏è CSV file not found: {filePath}");
            return;
        }

        List<HandsPreset> loadedPresets = new List<HandsPreset>();

        using (StreamReader reader = new StreamReader(filePath))
        {
            // –ü—Ä–æ–ø—É—Å–∫–∞–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫
            reader.ReadLine();

            string line;
            while ((line = reader.ReadLine()) != null)
            {
                string[] values = line.Split(',');

                if (values.Length >= 6)
                {
                    HandsPreset preset = new HandsPreset();
                    preset.presetName = values[0];

                    // –ó–∞–≥—Ä—É–∑–∫–∞ –ø—Ä–µ—Ñ–∞–±–∞ –ø–æ –ø—É—Ç–∏
                    if (values[1] != "None" && values[1] != "")
                    {
#if UNITY_EDITOR
                        preset.handsPrefab = UnityEditor.AssetDatabase.LoadAssetAtPath<GameObject>(values[1]);
#else
                        // –î–ª—è –±–∏–ª–¥–∞ - –∞–ª—å—Ç–µ—Ä–Ω–∞—Ç–∏–≤–Ω–∞—è –ª–æ–≥–∏–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏
                        Debug.Log($"Loading prefab for build: {values[1]}");
#endif
                    }

                    // –ü–∞—Ä—Å–∏–Ω–≥ –ø–æ–∑–∏—Ü–∏–∏ –∏ –º–∞—Å—à—Ç–∞–±–∞
                    if (float.TryParse(values[2], out float posX) &&
                        float.TryParse(values[3], out float posY) &&
                        float.TryParse(values[4], out float posZ) &&
                        float.TryParse(values[5], out float scale))
                    {
                        preset.positionOffset = new Vector3(posX, posY, posZ);
                        preset.scale = scale;
                    }

                    loadedPresets.Add(preset);
                }
            }
        }

        handsPresets = loadedPresets;
        presetsCount = handsPresets.Count;
        Debug.Log($"‚úÖ Loaded {handsPresets.Count} hands presets from CSV");
    }

    // –ò–ù–ò–¶–ò–ê–õ–ò–ó–ê–¶–ò–Ø –†–£–ö
    void InitializeHands()
    {
        if (handsPresets.Count > 0 && handsPresets[0].handsPrefab != null)
        {
            EquipHands(0); // –ü–µ—Ä–≤—ã–π –ø—Ä–µ—Å–µ—Ç –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
        }
        else
        {
            Debug.LogWarning("‚ö†Ô∏è No hands presets configured!");
        }

        isInitialized = true;
        Debug.Log("‚úÖ Arms Manager initialized with systems integration");
    }

    // –û–°–ù–û–í–ù–û–ô –ú–ï–¢–û–î –°–ú–ï–ù–´ –†–£–ö
    public void EquipHands(int presetIndex)
    {
        if (presetIndex < 0 || presetIndex >= handsPresets.Count)
        {
            Debug.LogError($"‚ùå Invalid hands preset index: {presetIndex}");
            return;
        }

        HandsPreset preset = handsPresets[presetIndex];

        if (preset.handsPrefab == null)
        {
            Debug.LogError($"‚ùå Hands prefab is null for preset: {preset.presetName}");
            return;
        }

        // –£–¥–∞–ª—è–µ–º —Å—Ç–∞—Ä—ã–µ —Ä—É–∫–∏
        if (currentHandsInstance != null)
        {
            Destroy(currentHandsInstance);
        }

        // –°–æ–∑–¥–∞–µ–º –Ω–æ–≤—ã–µ —Ä—É–∫–∏
        currentHandsInstance = Instantiate(preset.handsPrefab, transform);
        currentHandsInstance.transform.localPosition = preset.positionOffset;
        currentHandsInstance.transform.localRotation = Quaternion.identity;
        currentHandsInstance.transform.localScale = Vector3.one * preset.scale;

        // –ù–∞—Å—Ç—Ä–∞–∏–≤–∞–µ–º –∫–æ–º–ø–æ–Ω–µ–Ω—Ç—ã
        SetupCurrentHands();

        Debug.Log($"‚úÖ Equipped hands: {preset.presetName}");
    }

    // –°–ú–ï–ù–ê –†–£–ö –ü–û –ò–ú–ï–ù–ò –ü–†–ï–°–ï–¢–ê
    public void EquipHands(string presetName)
    {
        int index = handsPresets.FindIndex(p => p.presetName == presetName);
        if (index >= 0)
        {
            EquipHands(index);
        }
        else
        {
            Debug.LogError($"‚ùå Hands preset not found: {presetName}");
        }
    }

    void SetupCurrentHands()
    {
        if (currentHandsInstance == null) return;

        currentAnimator = currentHandsInstance.GetComponent<Animator>();
        if (currentAnimator != null)
        {
            currentAnimator.applyRootMotion = false;
        }

        SetHandsLayer();
        SetHandsTag();
    }

    void SetHandsLayer()
    {
        if (currentHandsInstance == null) return;

        int armsLayer = LayerMask.NameToLayer("Arms");
        if (armsLayer != -1)
        {
            SetLayerRecursively(currentHandsInstance, armsLayer);
        }
        else
        {
            Debug.LogWarning("‚ö†Ô∏è 'Arms' layer not found! Please create it in Project Settings");
        }
    }

    void SetHandsTag()
    {
        if (currentHandsInstance == null) return;

        currentHandsInstance.tag = playerArmsTag;
        SetTagRecursively(currentHandsInstance, playerArmsTag);
    }

    void SetLayerRecursively(GameObject obj, int layer)
    {
        if (obj == null) return;

        obj.layer = layer;
        foreach (Transform child in obj.transform)
        {
            SetLayerRecursively(child.gameObject, layer);
        }
    }

    void SetTagRecursively(GameObject obj, string tag)
    {
        if (obj == null) return;

        obj.tag = tag;
        foreach (Transform child in obj.transform)
        {
            SetTagRecursively(child.gameObject, tag);
        }
    }

    string GetPrefabPath(GameObject prefab)
    {
#if UNITY_EDITOR
        return UnityEditor.AssetDatabase.GetAssetPath(prefab);
#else
        return prefab.name;
#endif
    }

    void Update()
    {
        if (!isInitialized) return;

        UpdateSystemsIntegration();
        UpdateHandsAnimation();
        HandleTestInput();
    }

    // üîÑ –û–ë–ù–û–í–õ–ï–ù–ù–ê–Ø –ò–ù–¢–ï–ì–†–ê–¶–ò–Ø –° –°–ò–°–¢–ï–ú–ê–ú–ò
    void UpdateSystemsIntegration()
    {
        // –≠—Ñ—Ñ–µ–∫—Ç—ã –∑–¥–æ—Ä–æ–≤—å—è –Ω–∞ –¥—Ä–æ–∂–∞–Ω–∏–µ —Ä—É–∫
        UpdateHealthEffects();

        // –≠—Ñ—Ñ–µ–∫—Ç—ã —Å–∏—Å—Ç–µ–º—ã –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è –Ω–∞ —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç—å
        UpdateAimEffects();

        // –ü—Ä–∏–º–µ–Ω—è–µ–º –∫–æ–º–±–∏–Ω–∏—Ä–æ–≤–∞–Ω–Ω—ã–µ —ç—Ñ—Ñ–µ–∫—Ç—ã –∫ —Ä—É–∫–∞–º
        ApplyHandsEffects();
    }

    void UpdateHealthEffects()
    {
        if (playerHealth != null)
        {
            // –ò—Å–ø–æ–ª—å–∑—É–µ–º —Å—É—â–µ—Å—Ç–≤—É—é—â–∏–µ –ø–æ–ª—è PlayerHealth
            float healthPercent = playerHealth.currentHealth / playerHealth.maxHealth;
            healthShakeIntensity = Mathf.Clamp01(1f - healthPercent) * 0.3f;

            // –≠—Ñ—Ñ–µ–∫—Ç—ã —Ä–∞–¥–∏–∞—Ü–∏–∏
            float radiationPercent = playerHealth.currentRadiation / playerHealth.maxRadiation;
            radiationTremorIntensity = Mathf.Clamp01(radiationPercent) * 0.4f;
        }
    }

    void UpdateAimEffects()
    {
        if (aimSystem != null)
        {
            // –ë–µ–∑–æ–ø–∞—Å–Ω—ã–π –¥–æ—Å—Ç—É–ø –∫ —Å–∏—Å—Ç–µ–º–µ –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è
            aimStability = GetAimStability();

            // –£—á–∏—Ç—ã–≤–∞–µ–º —ç—Ñ—Ñ–µ–∫—Ç—ã –∑–¥–æ—Ä–æ–≤—å—è –Ω–∞ –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏–µ
            aimStability *= Mathf.Clamp01(1f - (healthShakeIntensity + radiationTremorIntensity));
        }
        else
        {
            aimStability = 1f; // –°—Ç–∞–Ω–¥–∞—Ä—Ç–Ω–∞—è —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç—å –µ—Å–ª–∏ —Å–∏—Å—Ç–µ–º–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω–∞
        }
    }

    // –ë–µ–∑–æ–ø–∞—Å–Ω—ã–π –º–µ—Ç–æ–¥ –ø–æ–ª—É—á–µ–Ω–∏—è —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç–∏ –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è
    float GetAimStability()
    {
        // –ï—Å–ª–∏ —Å–∏—Å—Ç–µ–º–∞ –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è –Ω–µ —Ä–µ–∞–ª–∏–∑–æ–≤–∞–Ω–∞, –≤–æ–∑–≤—Ä–∞—â–∞–µ–º –±–∞–∑–æ–≤—É—é —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç—å
        return 0.8f; // –ë–∞–∑–æ–≤–∞—è —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç—å –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è
    }

    void ApplyHandsEffects()
    {
        if (currentHandsInstance == null) return;

        // –ü—Ä–∏–º–µ–Ω—è–µ–º –¥—Ä–æ–∂–∞–Ω–∏–µ –∫ –ø–æ–∑–∏—Ü–∏–∏ —Ä—É–∫
        float totalShake = healthShakeIntensity + radiationTremorIntensity;
        if (totalShake > 0.01f)
        {
            Vector3 shakeOffset = new Vector3(
                Mathf.PerlinNoise(Time.time * 8f, 0) - 0.5f,
                Mathf.PerlinNoise(0, Time.time * 8f) - 0.5f,
                Mathf.PerlinNoise(Time.time * 6f, Time.time * 6f) - 0.5f
            ) * totalShake * 0.1f;

            currentHandsInstance.transform.localPosition += shakeOffset;
        }
    }

    void HandleTestInput()
    {
        // –¢–µ—Å—Ç–æ–≤—ã–µ –∫–ª–∞–≤–∏—à–∏ –¥–ª—è –±—ã—Å—Ç—Ä–æ–π —Å–º–µ–Ω—ã —Ä—É–∫ (1-9)
        for (int i = 0; i < Mathf.Min(handsPresets.Count, 9); i++)
        {
            if (Input.GetKeyDown(KeyCode.Alpha1 + i))
            {
                EquipHands(i);
            }
        }

        // –¢–µ—Å—Ç–æ–≤—ã–µ –∫–ª–∞–≤–∏—à–∏ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏
        if (Input.GetKeyDown(KeyCode.H))
        {
            SimulateHealthEffect();
        }
        if (Input.GetKeyDown(KeyCode.R))
        {
            SimulateRadiationEffect();
        }
    }

    void UpdateHandsAnimation()
    {
        if (currentAnimator == null) return;

        float moveSpeed = GetPlayerMoveSpeed();
        bool isMoving = moveSpeed > 0.1f;
        bool isSprinting = Input.GetKey(KeyCode.LeftShift) && isMoving;
        bool isCrouching = Input.GetKey(KeyCode.C);

        // –£—á–∏—Ç—ã–≤–∞–µ–º —Å—Ç–∞–±–∏–ª—å–Ω–æ—Å—Ç—å –ø—Ä–∏—Ü–µ–ª–∏–≤–∞–Ω–∏—è –≤ –∞–Ω–∏–º–∞—Ü–∏—è—Ö
        float stabilityMultiplier = aimStability;

        currentAnimator.SetFloat("Speed", moveSpeed * stabilityMultiplier);
        currentAnimator.SetBool("IsMoving", isMoving);
        currentAnimator.SetBool("IsSprinting", isSprinting);
        currentAnimator.SetBool("IsCrouching", isCrouching);

        // –ü–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–ª—è —ç—Ñ—Ñ–µ–∫—Ç–æ–≤ —Å–∏—Å—Ç–µ–º—ã
        currentAnimator.SetFloat("HealthShake", healthShakeIntensity);
        currentAnimator.SetFloat("RadiationTremor", radiationTremorIntensity);
        currentAnimator.SetFloat("AimStability", aimStability);

        // –ê–Ω–∏–º–∞—Ü–∏—è –¥—ã—Ö–∞–Ω–∏—è —Å —É—á–µ—Ç–æ–º —Å–æ—Å—Ç–æ—è–Ω–∏—è
        if (!isMoving)
        {
            float breathingIntensity = 1f - (healthShakeIntensity * 0.5f);
            currentAnimator.SetFloat("Breathing", Mathf.Sin(Time.time * 0.5f) * 0.1f * breathingIntensity);
        }
    }

    float GetPlayerMoveSpeed()
    {
        // –í—Ä–µ–º–µ–Ω–Ω–∞—è —Ä–µ–∞–ª–∏–∑–∞—Ü–∏—è - –∑–∞–º–µ–Ω–∏—Ç–µ –Ω–∞ –≤–∞—à—É —Å–∏—Å—Ç–µ–º—É –¥–≤–∏–∂–µ–Ω–∏—è
        if (Input.GetKey(KeyCode.LeftShift)) return 2.0f;
        if (Input.GetKey(KeyCode.W) || Input.GetKey(KeyCode.S) ||
            Input.GetKey(KeyCode.A) || Input.GetKey(KeyCode.D)) return 1.0f;
        return 0.0f;
    }

    // üîß –¢–ï–°–¢–û–í–´–ï –ú–ï–¢–û–î–´ –î–õ–Ø –ü–†–û–í–ï–†–ö–ò –ò–ù–¢–ï–ì–†–ê–¶–ò–ò
    void SimulateHealthEffect()
    {
        healthShakeIntensity = 0.2f;
        Debug.Log("üîß Simulating low health effect");
    }

    void SimulateRadiationEffect()
    {
        radiationTremorIntensity = 0.3f;
        Debug.Log("üîß Simulating radiation effect");
    }

    // API –¥–ª—è –≤–Ω–µ—à–Ω–µ–≥–æ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è
    public List<string> GetAvailablePresets()
    {
        return handsPresets.ConvertAll(p => p.presetName);
    }

    public int GetPresetsCount()
    {
        return handsPresets.Count;
    }

    public string GetCurrentPresetName()
    {
        if (currentHandsInstance == null) return "None";

        // –ù–∞—Ö–æ–¥–∏–º —Ç–µ–∫—É—â–∏–π –ø—Ä–µ—Å–µ—Ç –ø–æ –ø—Ä–µ—Ñ–∞–±—É
        foreach (var preset in handsPresets)
        {
            if (preset.handsPrefab != null && currentHandsInstance.name.StartsWith(preset.handsPrefab.name))
            {
                return preset.presetName;
            }
        }
        return "Unknown";
    }

    public void SetHandsVisibility(bool visible)
    {
        if (currentHandsInstance != null)
        {
            currentHandsInstance.SetActive(visible);
        }
    }

    // –ú–µ—Ç–æ–¥ –¥–ª—è –∏–Ω—Ç–µ–≥—Ä–∞—Ü–∏–∏ —Å —Å–∏—Å—Ç–µ–º–æ–π –∫–æ—Å—Ç—é–º–æ–≤
    public void EquipHandsByOutfit(OutfitType outfitType)
    {
        string presetName = outfitType.ToString().ToLower() + "_hands";
        EquipHands(presetName);
    }

    public void EquipStalkerWeapon(GameObject weaponHandsPrefab)
    {
        // –£–±–∏—Ä–∞–µ–º —Ç–µ–∫—É—â–∏–µ —Ä—É–∫–∏
        if (currentHandsInstance != null)
            Destroy(currentHandsInstance);

        // –°–æ–∑–¥–∞–µ–º —Ä—É–∫–∏ —Å –æ—Ä—É–∂–∏–µ–º –≤ —Å—Ç–∏–ª–µ STALKER
        currentHandsInstance = Instantiate(weaponHandsPrefab, transform);
        SetupStalkerWeaponAnimations();
    }

    private void SetupStalkerWeaponAnimations()
    {
        currentAnimator = currentHandsInstance.GetComponent<Animator>();

        // STALKER-style –ø–∞—Ä–∞–º–µ—Ç—Ä—ã:
        // - Fire (—Å—Ç—Ä–µ–ª—å–±–∞)
        // - Reload (–ø–µ—Ä–µ–∑–∞—Ä—è–¥–∫–∞) 
        // - Jam (–∑–∞–∫–ª–∏–Ω–∏–≤–∞–Ω–∏–µ)
        // - Condition (—Å–æ—Å—Ç–æ—è–Ω–∏–µ –æ—Ä—É–∂–∏—è –≤–ª–∏—è–µ—Ç –Ω–∞ –∞–Ω–∏–º–∞—Ü–∏–∏)
    }

    // üîÑ –ú–ï–¢–û–î–´ –î–õ–Ø –í–ù–ï–®–ù–ï–ì–û –í–û–ó–î–ï–ô–°–¢–í–ò–Ø
    public void ApplyHealthEffect(float intensity)
    {
        healthShakeIntensity = Mathf.Clamp01(intensity);
    }

    public void ApplyRadiationEffect(float intensity)
    {
        radiationTremorIntensity = Mathf.Clamp01(intensity);
    }

    public void SetAimStability(float stability)
    {
        aimStability = Mathf.Clamp01(stability);
    }

    void OnDestroy()
    {
        // –û—Ç–ø–∏—Å—ã–≤–∞–µ–º—Å—è –æ—Ç —Å–æ–±—ã—Ç–∏–π –ø—Ä–∏ —É–Ω–∏—á—Ç–æ–∂–µ–Ω–∏–∏
        if (playerHealth != null)
        {
            playerHealth.OnHealthChanged -= OnHealthChanged;
            playerHealth.OnRadiationChanged -= OnRadiationChanged;
        }
    }
}

// Enum –¥–ª—è —Ç–∏–ø–æ–≤ –∫–æ—Å—Ç—é–º–æ–≤
public enum OutfitType
{
    Default,
    Seva,
    Exoskeleton,
    Mercenary,
    Leather,
    Military
}